--- a/index.html
+++ b/index.html
@@ -1,1 +1,180 @@
-Hello World
+<!DOCTYPE HTML PUBLIC "-//IETF//DTD HTML//EN">
+<html>
+<title> Yuan Zhang </title>
+<meta charset="utf-8">
+<meta name="description" content="Yuan Zhang">
+<meta name="keywords" content="">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<style>
+    A {
+        text-decoration: none
+    }
+
+    body {
+        font: 100% Verdana, Arial, Helvetica, sans-serif;
+        background-color: #FFFFFF;
+        list-style: blue4;
+        vlink: #0000ff;
+        margin: 0;
+        padding: 0;
+    }
+
+    body table {
+         margin: 0;
+         padding: 0;
+    }
+
+    body table tr {
+        margin: 0;
+        padding: 0;
+    }
+
+
+</style>
+</head>
+
+<body>
+<table width="100%" cellpadding=0>
+    <tr>
+        <td width="15%" bgcolor="lightgray"></td>
+        <td width="5%" bgcolor="white"></td>
+        <td width="60%">
+            <h2><b>Yuan Zhang</b></h2>
+            <i>Associate Professor, Ph.D</i><br>
+            <i>School of Computer Science</i><br>
+            <i>Fudan University</i>
+            <br><br>
+            <p style="font-family: Courier New">
+                <b>Email:</b> yuanxzhang [AT] fudan.edu.cn <br>
+                <b>Office:</b> Room 313, Software Building, NO. 825 Zhangheng Road, Shanghai
+            </p>
+
+            <p>
+                <b>Short Bio: </b> Yuan Zhang is an Associate Professor of Computer Science in Fudan University.
+                He received his Ph.D degree from Fudan University in 2014,
+                and Bachelor degree from Nanjing University in 2009.
+            </p>
+            <p>
+                His research interests span all areas in system security and software analysis,
+                especially on Android security, static code analysis, managed runtime.
+                Currently, he co-advises the System Software and Security Laboratory in Fudan University.
+            </p>
+
+            <table cellspacing=4 cellpadding=4 font face="arial">
+                <tr>
+                    <td style="font-family: arial"> <a href="#background">background</a></td><td>
+                    <td style="font-family: arial"> <a href="#publications">publications</a></td><td>
+                    <td style="font-family: arial"> <a href="#teaching">teaching</a></td><td>
+                    <td style="font-family: arial"> <a href="#activities">activities</a></td>
+                </tr>
+            </table>
+
+            <hr size=2>
+            <h3><a name="background">Background</a></h3>
+            <p>
+                <ul>
+                    <li>2017.12~now, Fudan University, School of Computer Science, Associate Professor</li>
+                    <li>2017.12~2017.11, Fudan University, School of Computer Science, Assistant Professor</li>
+                    <li>2009.09~2014.06, Fudan University, School of Computer Science, Ph.D</li>
+                    <li>2005.09~2009.06, Nanjing University, Software Institute, B.Eng</li>
+                </ul>
+            </p>
+
+            <hr size=2>
+            <h3><a name="publications">Publications</a></h3>
+            <p>
+                <ol>
+                    <li>Yuan Zhang, Jiarun Dai, Xiaohan Zhang, Sirong Huang, Zhemin Yang, Min Yang, Hao Chen.
+                        Detecting Third-Party Libraries in Android Applications with High Precision and Recall.
+                        In Proceedings of IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER’18, Campobasso, Italy, March 20-23, 2018.</li>
+                    <li>Yuhong Nan, Zhemin Yang, Xiaofeng Wang, Yuan Zhang, Donglai Zhu, Min Yang.
+                        Finding Clues for Your Secrets: Semantics-Driven, Learning-Based Privacy Discovery in Mobile Apps.
+                        In Proceedings of Network and Distributed System Security Symposium, NDSS’18, San Diego, Feb 18-21, 2018.</li>
+                    <li>Yuhong Nan, Zhemin Yang, Min Yang, Shunfan Zhou, Yuan Zhang, Guofei Gu, Xiaofeng Wang, Limin Sun.
+                        Identifying User-Input Privacy in Mobile Applications at a Large Scale.
+                        In IEEE Transactions on Information Forensics and Security(TIFS), 2017, 12(3), 647-661.</li>
+                    <li>Yuan Zhang, Min Yang, Guofei Gu, Hao Chen.
+                        Rethinking Permission Enforcement Mechanism on Mobile Systems.
+                        In IEEE Transactions on Information Forensics and Security(TIFS), 2016, 9(11), 1828-1842.</li>
+                    <li>Yuan Zhang, Min Yang, Guofei Gu, Hao Chen.
+                        FineDroid: Enforcing Permissions with System-wide Application Execution Context.
+                        In Proceedings of the 11th EAI International Conference on Security and Privacy in Communication Networks, SecureComm’15, Dallas, TX, October 26-29, 2015.</li>
+                    <li>Fangda Cai, Hao Chen, Yuanyi Wu, Yuan Zhang.
+                        AppCracker: Widespread Vulnerabilities in User and Session Authentication in Mobile Apps.
+                        In Proceedings of 4th IEEE Mobile Security Technologies (co-located with IEEE S&P), MoST’15, San Jose, CA, May 21, 2015.</li>
+                    <li>Yuan Zhang, Min Yang, Zhemin Yang, Guofei Gu, Peng Ning, Binyu Zang.
+                        Permission Use Analysis for Vetting Undesirable Behaviors in Android Apps.
+                        In IEEE Transactions on Information Forensics and Security(TIFS), 2014, 9(11), 1828-1842.</li>
+                    <li>Yuan Zhang, Min Yang, Bo Zhou, Zhemin Yang, Weihua Zhang, Binyu Zang.
+                        Swift: A Registerbased JIT Compiler for Embedded JVMs.
+                        In Proceedings of the 8th international conference on Virtual execution environments, VEE’12, London, UK, March 3-4, 2012.</li>
+                    <li>Zhemin Yang, Min Yang, Yuan Zhang, Guofei Gu, Peng Ning and X. Sean Wang.
+                        AppIntent: Analyzing Sensitive Data Transmission in Android for Privacy Leakage Detection.
+                        In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.</li>
+                    <li>Yuan Zhang, Min Yang, Bingquan Xu, Zhemin Yang, Guofei Gu, Peng Ning, X. Sean Wang, Binyu Zang.
+                        Vetting Undesirable Behaviors in Android Apps with Permission Use Analysis.
+                        In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.</li>
+                </ol>
+            </p>
+
+            <hr size=2>
+            <h3><a name="teaching">Teaching</a></h3>
+            <p>Undergraduate level:<br>
+                <ul>
+                    <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
+                        <ul><li><i>Fall 2016, Fall 2017</i></li></ul>
+                    </li>
+                    <li> Compiler Principles <i>(in School of Software)</i>
+                        <ul><li><i>Fall 2017</i></li></ul>
+                    </li>
+                    <li> Principles of Reverse Engineering <i>(in School of Computer Science)</i>
+                        <ul><li><i>Spring 2018</i></li></ul>
+                    </li>
+                </ul>
+            </p>
+
+            <p>Graduate level:<br>
+                <ul>
+                    <li> Computer Network Security <i>(in School of Software)</i>
+                        <ul><li><i>Spring 2016, Spring 2017, Spring 2018</i></li></ul>
+                    </li>
+                </ul>
+            </p>
+
+            <hr size=2>
+            <h3><a name="activities">Activities</a></h3>
+            <p>
+                Journal Reviewer for <i>IEEE Transactions on Information Forensics and Security,
+                IEEE Transactions on Mobile Computing, ACM Transactions on Information Systems,
+                Computer & Security, SCIENCE CHINA Information Sciences</i>.
+            </p>
+            <p>
+                Conference Reviewer for <i>NDSS, ACSAC, AsiaCCS, SecureComm, RAID, WiSec, SPSM</i>.
+            </p>
+
+            <br>
+            <center><small>Last Modified: March 13, 2018, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+        </td>
+        <td width=5% bgcolor="white"></td>
+        <td width=15% bgcolor="lightgray"></td>
+
+
+    </tr>
+</table>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
