adjust li margin

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
         padding: 0;
     }
 
-
+    li {
+        margin-bottom: 10px;
+    }
 </style>
 </head>
 
@@ -58,7 +60,7 @@
             <p>
                 His research interests span all areas in system security and software analysis,
                 especially on Android security, static code analysis, managed runtime.
-                Currently, he co-advises the System Software and Security Laboratory in Fudan University.
+                Currently, he co-directs the System Software and Security Laboratory in Fudan University.
             </p>
 
             <table cellspacing=4 cellpadding=4 font face="arial">
@@ -83,7 +85,7 @@
 
             <hr size=2>
             <h3><a name="publications">Publications</a></h3>
-            <p>
+            <p id="pub">
                 <ol>
                     <li>Yuan Zhang, Jiarun Dai, Xiaohan Zhang, Sirong Huang, Zhemin Yang, Min Yang, Hao Chen.
                         Detecting Third-Party Libraries in Android Applications with High Precision and Recall.
