add paper pdf & to prospective students

--- a/index.html
+++ b/index.html
@@ -56,11 +56,14 @@
                 <b>Short Bio: </b> Yuan Zhang is an Associate Professor of Computer Science in Fudan University.
                 He received his Ph.D degree from Fudan University in 2014,
                 and Bachelor degree from Nanjing University in 2009.
-            </p>
-            <p>
+            
                 His research interests span all areas in system security and software analysis,
                 especially on Android security, static code analysis, managed runtime.
                 Currently, he co-directs the System Software and Security Laboratory in Fudan University.
+            </p>
+            <p><small>
+                <i><b>To prospective students/postdoctors. </b> If you want to work with me to tackle cutting-edge system security problems, 
+                    please feel free to drop me an email.</i></small>
             </p>
 
             <table cellspacing=4 cellpadding=4 font face="arial">
@@ -89,34 +92,44 @@
                 <ol>
                     <li>Yuan Zhang, Jiarun Dai, Xiaohan Zhang, Sirong Huang, Zhemin Yang, Min Yang, Hao Chen.
                         Detecting Third-Party Libraries in Android Applications with High Precision and Recall.
-                        In Proceedings of IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER’18, Campobasso, Italy, March 20-23, 2018.</li>
+                        In Proceedings of IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER’18, Campobasso, Italy, March 20-23, 2018. 
+                        <a href="./paper/libpecker-saner2018.pdf">[PDF]</a></li>
                     <li>Yuhong Nan, Zhemin Yang, Xiaofeng Wang, Yuan Zhang, Donglai Zhu, Min Yang.
                         Finding Clues for Your Secrets: Semantics-Driven, Learning-Based Privacy Discovery in Mobile Apps.
-                        In Proceedings of Network and Distributed System Security Symposium, NDSS’18, San Diego, Feb 18-21, 2018.</li>
+                        In Proceedings of Network and Distributed System Security Symposium, NDSS’18, San Diego, Feb 18-21, 2018.
+                        <a href="./paper/cluefinder-ndss2018.pdf">[PDF]</a></li>
                     <li>Yuhong Nan, Zhemin Yang, Min Yang, Shunfan Zhou, Yuan Zhang, Guofei Gu, Xiaofeng Wang, Limin Sun.
                         Identifying User-Input Privacy in Mobile Applications at a Large Scale.
-                        In IEEE Transactions on Information Forensics and Security(TIFS), 2017, 12(3), 647-661.</li>
+                        In IEEE Transactions on Information Forensics and Security(TIFS), 2017, 12(3), 647-661.
+                        <a href="./paper/uipicker-tifs.pdf">[PDF]</a></li>
                     <li>Yuan Zhang, Min Yang, Guofei Gu, Hao Chen.
                         Rethinking Permission Enforcement Mechanism on Mobile Systems.
-                        In IEEE Transactions on Information Forensics and Security(TIFS), 2016, 9(11), 1828-1842.</li>
+                        In IEEE Transactions on Information Forensics and Security(TIFS), 2016, 9(11), 1828-1842.
+                        <a href="./paper/finedroid-tifs.pdf">[PDF]</a></li>
                     <li>Yuan Zhang, Min Yang, Guofei Gu, Hao Chen.
                         FineDroid: Enforcing Permissions with System-wide Application Execution Context.
-                        In Proceedings of the 11th EAI International Conference on Security and Privacy in Communication Networks, SecureComm’15, Dallas, TX, October 26-29, 2015.</li>
+                        In Proceedings of the 11th EAI International Conference on Security and Privacy in Communication Networks, SecureComm’15, Dallas, TX, October 26-29, 2015.
+                        <a href="./paper/finedroid-securecomm2015.pdf">[PDF]</a></li>
                     <li>Fangda Cai, Hao Chen, Yuanyi Wu, Yuan Zhang.
                         AppCracker: Widespread Vulnerabilities in User and Session Authentication in Mobile Apps.
-                        In Proceedings of 4th IEEE Mobile Security Technologies (co-located with IEEE S&P), MoST’15, San Jose, CA, May 21, 2015.</li>
+                        In Proceedings of 4th IEEE Mobile Security Technologies (co-located with IEEE S&P), MoST’15, San Jose, CA, May 21, 2015.
+                        <a href="./paper/appcracker-most2015.pdf">[PDF]</a></li>
                     <li>Yuan Zhang, Min Yang, Zhemin Yang, Guofei Gu, Peng Ning, Binyu Zang.
                         Permission Use Analysis for Vetting Undesirable Behaviors in Android Apps.
-                        In IEEE Transactions on Information Forensics and Security(TIFS), 2014, 9(11), 1828-1842.</li>
+                        In IEEE Transactions on Information Forensics and Security(TIFS), 2014, 9(11), 1828-1842.
+                        <a href="./paper/vetdroid-tifs.pdf">[PDF]</a></li>
                     <li>Zhemin Yang, Min Yang, Yuan Zhang, Guofei Gu, Peng Ning and X. Sean Wang.
                         AppIntent: Analyzing Sensitive Data Transmission in Android for Privacy Leakage Detection.
-                        In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.</li>
+                        In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.
+                        <a href="./paper/appintent-ccs2013.pdf">[PDF]</a></li>
                     <li>Yuan Zhang, Min Yang, Bingquan Xu, Zhemin Yang, Guofei Gu, Peng Ning, X. Sean Wang, Binyu Zang.
                         Vetting Undesirable Behaviors in Android Apps with Permission Use Analysis.
-                        In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.</li>
+                        In Proceedings of the 20th ACM Conference on Computer and Communications Security, CCS’13, Berlin, Germany, November 4-8, 2013.
+                        <a href="./paper/vetdroid-ccs2013.pdf">[PDF]</a></li>
                     <li>Yuan Zhang, Min Yang, Bo Zhou, Zhemin Yang, Weihua Zhang, Binyu Zang.
                         Swift: A Registerbased JIT Compiler for Embedded JVMs.
-                        In Proceedings of the 8th international conference on Virtual execution environments, VEE’12, London, UK, March 3-4, 2012.</li>
+                        In Proceedings of the 8th international conference on Virtual execution environments, VEE’12, London, UK, March 3-4, 2012.
+                        <a href="./paper/swift-vee2012.pdf">[PDF]</a></li>
                 </ol>
             </p>
 
