--- a/index.html
+++ b/index.html
@@ -33,10 +33,17 @@
     li {
         margin-bottom: 10px;
     }
+
+    #tracker {
+        text-align: center;
+        margin: 10px auto;
+        /* widows: 50px; */
+    }
 </style>
 </head>
 
 <body>
+<!-- <script type="text/javascript" id="clustrmaps" src="http://cdn.clustrmaps.com/map_v2.js?d=lplNOM8Srknxk2Rdb7zm-qrXmm8SrZkvyeNgEfmfZAU&cl=ffffff&w=a"></script>     -->
 <table width="100%" cellpadding=0>
     <tr>
         <td width="15%" bgcolor="lightgray"></td>
@@ -170,13 +177,21 @@
 
             <br>
             <center><small>Last Modified: March 13, 2018, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+
+            <div id="tracker">
+                    <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
+                    <img src="http://www.clustrmaps.com/map_v2.png?d=lplNOM8Srknxk2Rdb7zm-qrXmm8SrZkvyeNgEfmfZAU&cl=ffffff" /></a>
+            </div>
         </td>
         <td width=5% bgcolor="white"></td>
         <td width=15% bgcolor="lightgray"></td>
 
 
     </tr>
+    
 </table>
+
+
 </body>
 </html>
 
