add link to google scholar

--- a/index.html
+++ b/index.html
@@ -49,10 +49,12 @@
         <td width="15%" bgcolor="lightgray"></td>
         <td width="5%" bgcolor="white"></td>
         <td width="60%">
+            <br>
             <h2><b>Yuan Zhang</b></h2>
             <i>Associate Professor, Ph.D</i><br>
-            <i>School of Computer Science</i><br>
-            <i>Fudan University</i>
+            <i>School of Computer Science, Fudan University</i>
+            <i></i><br>
+            <small><a href="https://scholar.google.com/citations?user=ZEgzyZcAAAAJ">Google Scholar Profile</a></small>
             <br><br>
             <p style="font-family: Courier New">
                 <b>Email:</b> yuanxzhang [AT] fudan.edu.cn <br>
