--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             </p>
 
             <p>
-                <b>Short Bio: </b> Yuan Zhang is an Associate Professor of Computer Science in Fudan University.
+                <b>Short Bio: </b> Yuan Zhang is an Associate Professor of <a href="http://www.cs.fudan.edu.cn/">School of Computer Science</a> in <a href="http://www.fudan.edu.cn/">Fudan University</a>.
                 He received his Ph.D degree from Fudan University in 2014,
                 and Bachelor degree from Nanjing University in 2009.
             
@@ -123,7 +123,7 @@
                     <li>
                         <div class="title">An Empirical Study of Web Resource Manipulation in Real-world Mobile Applications.</div>
                         <div class="author">Xiaohan Zhang, <span>Yuan Zhang</span>, Qianqian Mo, Hao Xia, Zhemin Yang, Min Yang, Xiaofeng Wang, Long Lu, Haixin Duan.</div>
-                        <div class="venue">In Proceedings of the 27th USENIX Security Symposium, Security’18, Baltimore, USA, Augues 15-17, 2018. (to appear)</div>
+                        <div class="venue">In Proceedings of the 27th USENIX Security Symposium, Security’18, Baltimore, USA, August 15-17, 2018. (to appear)</div>
                     </li>
                     <li>
                         <div class="title">Detecting Third-Party Libraries in Android Applications with High Precision and Recall.</div>
