update usenix security & ccs

--- a/index.html
+++ b/index.html
@@ -121,9 +121,24 @@
             <div id="pub">
                 <ol>
                     <li>
+                        <div class="title">How You Get Bullets in Your Back: A Systematical Study about Cryptojacking in Real-world.</div>
+                        <div class="author">Geng Hong, Zhemin Yang, Sen Yang, Lei Zhang, Yuhong Nan, Zhibo Zhang, Min Yang, Yuan Zhang, Zhiyun Qian, Haixin Duan.</div>
+                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018 (to appear).
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title">Invetter: Locating Insecure Input Validations in Android Services.</div>
+                        <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Zhenyu Zhang, Zhiyun Qian, Geng Hong, Yuan Zhang, Min Yang.</div>
+                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018 (conditionally accepted, to appear).
+                        </div>
+                    </li>
+                    <li>
                         <div class="title">An Empirical Study of Web Resource Manipulation in Real-world Mobile Applications.</div>
-                        <div class="author">Xiaohan Zhang, <span>Yuan Zhang</span>, Qianqian Mo, Hao Xia, Zhemin Yang, Min Yang, Xiaofeng Wang, Long Lu, Haixin Duan.</div>
-                        <div class="venue">In Proceedings of the 27th USENIX Security Symposium, Security’18, Baltimore, USA, August 15-17, 2018. (to appear)</div>
+                        <div class="author">Xiaohan Zhang, Yuan Zhang, Qianqian Mo, Hao Xia, Zhemin Yang, Min Yang, Xiaofeng Wang, Long Lu, Haixin Duan.</div>
+                        <div class="venue">In Proceedings of the 27th USENIX Security Symposium, Security’18, Baltimore, USA, August 15-17, 2018.
+                            <a href="./paper/xpmchecker-security2018.pdf">[PDF]</a>
+                            <a href="https://xhzhang.github.io/XPMChecker/">[Dataset]</a>
+                        </div>
                     </li>
                     <li>
                         <div class="title">Detecting Third-Party Libraries in Android Applications with High Precision and Recall.</div>
@@ -234,7 +249,7 @@
             </div>
 
             <br>
-            <center><small>Last Modified: March 13, 2018, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <center><small>Last Modified: August 8, 2018, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
