--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
                     <li>
                         <div class="title">How You Get Bullets in Your Back: A Systematical Study about Cryptojacking in Real-world.</div>
                         <div class="author">Geng Hong, Zhemin Yang, Sen Yang, Lei Zhang, Yuhong Nan, Zhibo Zhang, Min Yang, Yuan Zhang, Zhiyun Qian, Haixin Duan.</div>
-                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018 (to appear).
+                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018.
                                 <a href="./paper/cmtracker-ccs2018">[PDF]</a>
                         </div>
                     </li>
                     <li>
                         <div class="title">Invetter: Locating Insecure Input Validations in Android Services.</div>
                         <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Zhenyu Zhang, Zhiyun Qian, Geng Hong, Yuan Zhang, Min Yang.</div>
-                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018 (conditionally accepted, to appear).
+                        <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018.
                                 <a href="./paper/invetter-ccs2018.pdf">[PDF]</a>
                         </div>
                     </li>
