--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <div class="title">How You Get Bullets in Your Back: A Systematical Study about Cryptojacking in Real-world.</div>
                         <div class="author">Geng Hong, Zhemin Yang, Sen Yang, Lei Zhang, Yuhong Nan, Zhibo Zhang, Min Yang, Yuan Zhang, Zhiyun Qian, Haixin Duan.</div>
                         <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018.
-                                <a href="./paper/cmtracker-ccs2018">[PDF]</a>
+                                <a href="./paper/cmtracker-ccs2018.pdf">[PDF]</a>
                         </div>
                     </li>
                     <li>
