--- a/index.html
+++ b/index.html
@@ -147,6 +147,7 @@
                         <div class="author">Yuan Zhang, Jiarun Dai, Xiaohan Zhang, Sirong Huang, Zhemin Yang, Min Yang, Hao Chen.</div>
                         <div class="venue">In Proceedings of IEEE International Conference on Software Analysis, Evolution and Reengineering, SANER’18, Campobasso, Italy, March 20-23, 2018. 
                             <a href="./paper/libpecker-saner2018.pdf">[PDF]</a>
+							<a href="https://github.com/yuanxzhang/LibPecker">[Source Code]</a>
                         </div>
                     </li>
                     <li>
