--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
             <h3><a name="publications">Publications</a></h3>
             <div id="pub">
                 <ol>
+					
                     <li>
                         <div class="title">How You Get Shot in the Back: A Systematical Study about Cryptojacking in the Real World.</div>
                         <div class="author">Geng Hong, Zhemin Yang, Sen Yang, Lei Zhang, Yuhong Nan, Zhibo Zhang, Min Yang, Yuan Zhang, Zhiyun Qian, Haixin Duan.</div>
@@ -128,7 +129,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="title">Inveer: Locating Insecure Input Validations in Android Services.</div>
+                        <div class="title">Invetter: Locating Insecure Input Validations in Android Services.</div>
                         <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Zhenyu Zhang, Zhiyun Qian, Geng Hong, Yuan Zhang, Min Yang.</div>
                         <div class="venue">In Proceedings of the 25th ACM Conference on Computer and Communications Security, CCS'18, Toronto, Canada, October 15-19, 2018.
                                 <a href="./paper/invetter-ccs2018.pdf">[PDF]</a>
